@@ -1,30 +1,0 @@
-<!DOCTYPE html
-    PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="<%= @contents[:lang] %>">
-<head>
-<%= @contents[:header] %>
-</head>
-
-<body>
-<div class="<%= @contents[:view_style] %>">
-  <div class="adminmenu"><%= @contents[:tools] %></div>
-  <h1 class="header"><%= @contents[:title] %></h1>
-
-  <div class="day">
-    <div class="body">
-      <div class="section">
-        <p><strong><%= @contents[:msg] %></strong></p>
-        <p><%= @contents[:link] %></p>
-      </div>
-    </div>
-  </div>
-</div>
-<% if @contents[:sidebar_class] %>
-<div class="<%= @contents[:sidebar_class] %>">
-  <%= @contents[:sidebar] %>
-</div>
-<% end %>
-<div class="footer"><%= @contents[:footer] %></div>
-</body>
-</html>
